fix(auth): change spacing and radius of Auth page

--- a/client/src/features/auth/components/AuthBanner/AuthBanner.module.scss
+++ b/client/src/features/auth/components/AuthBanner/AuthBanner.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: var(--space-7) var(--space-6);
-  border-radius: var(--radius-xl);
+  border-radius: var(--radius-lg);
   background-image: url('@/features/auth/assets/images/auth-banner.png');
   background-size: cover;
   background-position: left;
