--- a/client/src/features/auth/components/AuthForm/AuthForm.module.scss
+++ b/client/src/features/auth/components/AuthForm/AuthForm.module.scss
@@ -2,10 +2,10 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: var(--space-6);
-  padding: var(--space-5) var(--space-6);
+  gap: var(--space-8);
+  padding: var(--space-10);
 
   .mainContent {
     width: 60%;
